db connected using docker

--- a/projects/ecomm/server/package.json
+++ b/projects/ecomm/server/package.json
@@ -3,9 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "test-db": "ts-node test-db.ts"
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^5.0.5",
+    "@types/jwt-simple": "^0.5.36",
+    "@types/node": "^24.10.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "bcrypt-ts": "^7.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jwt-simple": "^0.5.6",
+    "mysql2": "^3.15.3",
+    "nodemon": "^3.1.11"
+  }
 }
