--- a/projects/ecomm/server/package.json
+++ b/projects/ecomm/server/package.json
@@ -1,8 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+  "prisma:generate": "prisma generate",
+  "prisma:push": "prisma db push",
+  "prisma:migrate": "prisma migrate dev",
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
@@ -15,15 +18,18 @@
     "@types/express": "^5.0.5",
     "@types/jwt-simple": "^0.5.36",
     "@types/node": "^24.10.1",
+    "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "bcrypt-ts": "^7.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jwt-simple": "^0.5.6",
     "mysql2": "^3.15.3",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "pg": "^8.16.3"
   }
 }
