signup finsh commit

--- a/projects/ecomm/server/tsconfig.json
+++ b/projects/ecomm/server/tsconfig.json
@@ -40,6 +40,6 @@
     "moduleDetection": "force",
     "skipLibCheck": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "controllers"],
   "exclude": ["node_modules", "dist", "prisma.config.ts"]
 }
