--- a/projects/ecomm/server/package.json
+++ b/projects/ecomm/server/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-  "prisma:generate": "prisma generate",
-  "prisma:push": "prisma db push",
-  "prisma:migrate": "prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:migrate": "prisma migrate dev",
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
@@ -15,6 +15,8 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.5",
     "@types/jwt-simple": "^0.5.36",
     "@types/node": "^24.10.1",
@@ -24,7 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
-    "bcrypt-ts": "^7.1.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jwt-simple": "^0.5.6",
