--- a/projects/ecomm/server/package.json
+++ b/projects/ecomm/server/package.json
@@ -18,6 +18,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/jwt-simple": "^0.5.36",
     "@types/node": "^24.10.1",
     "prisma": "^6.19.0",
@@ -29,6 +30,7 @@
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "jwt-simple": "^0.5.6",
     "mysql2": "^3.15.3",
     "nodemon": "^3.1.11",
