--- a/projects/ecomm/client/package.json
+++ b/projects/ecomm/client/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.13.2",
     "lite-server": "^2.6.1"
   }
 }
