--- a/projects/ecomm/server/package.json
+++ b/projects/ecomm/server/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "@types/axios": "^0.9.36",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
