product unfinished commit

--- a/projects/ecomm/server/tsconfig.json
+++ b/projects/ecomm/server/tsconfig.json
@@ -2,14 +2,14 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    "rootDir": ".",
     "outDir": "./dist",
 
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "NodeNext",
     "target": "esnext",
-    "types": [],
+    "types": ["node"],
     // For nodejs:
     // "lib": ["esnext"],
     // "types": ["node"],
@@ -35,11 +35,12 @@
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
+    "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
     "skipLibCheck": true,
   },
-  "include": ["src/**/*", "controllers"],
+  "include": ["src/**/*", "controllers", "prisma/**/*"],
   "exclude": ["node_modules", "dist", "prisma.config.ts"]
 }
